--- a/source/less/bloks/button.less
+++ b/source/less/bloks/button.less
@@ -14,7 +14,9 @@
   text-align: center;
   width: 280px;
   height: 58px;
-  margin: 72px 20px 3px 20px;
+  margin: 52px auto 3px auto;
+  display: block;
+  font-family: inherit;
 
   @media (min-width: @tablet-width) {
     width: 324px;
