--- a/source/less/bloks/main-footer.less
+++ b/source/less/bloks/main-footer.less
@@ -38,7 +38,11 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 4px 61px;
+    padding: 8px 61px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 9px 120px;
   }
 }
 
