--- a/source/less/bloks/hero.less
+++ b/source/less/bloks/hero.less
@@ -5,13 +5,14 @@
   background-image: url(../img/back-mobile.jpg);
   background-repeat: no-repeat;
   padding: 90px 12px 85px 12px;
+
   &::after {
     content: "";
     width: 100%;
     height: 72px;
     position: absolute;
     left: 0;
-    bottom: 0;
+    bottom: -1px;
     display: block;
     background: url(../img/intro-triangle.svg) center bottom no-repeat;
   }
@@ -48,7 +49,8 @@
 }
 
 .hero__small {
-  padding: 26px 12px 85px 12px;
+  padding: 50px 45px 67px 45px;
+  background-position: bottom center;
 }
 
 .hero__img {
