--- a/source/less/bloks/promo-block.less
+++ b/source/less/bloks/promo-block.less
@@ -28,6 +28,14 @@
     left: 236px;
     font-size: 30px;
   }
+
+  @media (min-width: @desktop-width) {
+    position: relative;
+    top: auto;
+    left: auto;
+    font-size: 30px;
+    margin-top: 0;
+  }
 }
 
 .promo-block__discription {
@@ -39,8 +47,21 @@
   margin: 0 0 0 0;
   padding-top: 0;
 
+  br {
+    display: none;
+  }
+
   @media (min-width: @tablet-width) {
     padding-top: 78px;
+    padding-bottom: 32px;
+
+    br {
+      display: inline;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 5px;
     padding-bottom: 32px;
   }
 }
@@ -49,7 +70,7 @@
   display: inline-block;
   font-family: inherit;
   font-weight: 700;
-  font-size: 20px;
+  font-size: 21px;
   line-height: 36px;
   background-color: #82b3d3;
   color: #ffffff;
@@ -64,7 +85,11 @@
   @media (min-width: @tablet-width) {
     width: 447px;
     height: 58px;
-    padding: 12px 142px 15px 121px;
-    margin-top: 10px;
+    padding: 12px 22px 15px 12px;
+    margin-top: 5px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding: 14px 22px 15px 12px;
   }
 }
