заканчиваю форму десктоп

--- a/source/less/bloks/button.less
+++ b/source/less/bloks/button.less
@@ -20,6 +20,7 @@
 
   @media (min-width: @tablet-width) {
     width: 324px;
+    margin: 42px 384px 3px auto;
   }
 
   @media (min-width: @desktop-width) {
@@ -64,4 +65,10 @@
   text-align: right;
   text-transform: uppercase;
   color: @text-description-black;
+
+  @media (min-width: @tablet-width) {
+    position: relative;
+    left: 407px;
+    top: -39px;
+  }
 }
