--- a/source/less/bloks/main-footer.less
+++ b/source/less/bloks/main-footer.less
@@ -38,7 +38,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 8px 61px;
+    padding-left: 61px;
+    padding-right: 61px;
+    padding-top: 34px;
   }
 
   @media (min-width: @desktop-width) {
