--- a/source/less/bloks/describe-impressions.less
+++ b/source/less/bloks/describe-impressions.less
@@ -4,6 +4,11 @@
   font-size: 18px;
   text-align: center;
   text-transform: uppercase;
+
+  @media (min-width: @tablet-width) {
+    font-size: 21px;
+    margin-top: 54px;
+  }
 }
 
 .describe-impressions__title::placeholder {
@@ -19,6 +24,8 @@
 
   @media (min-width: @tablet-width) {
     width: 648px;
+    padding-top: 6px;
+    margin-top: 17px;
   }
 
   @media (min-width: @desktop-width) {
