--- a/source/less/bloks/form-container-header.less
+++ b/source/less/bloks/form-container-header.less
@@ -4,11 +4,12 @@
   font-size: 18px;
   text-align: center;
   text-transform: uppercase;
-  padding-top: 20px;
+  padding-top: 21px;
   margin-bottom: 25px;
 
   @media (min-width: @tablet-width) {
     font-size: 30px;
+    padding-top: 36px;
   }
 }
 
@@ -19,6 +20,13 @@
   text-align: center;
   text-transform: uppercase;
   color: @text-description-black;
+
+  @media (min-width: @tablet-width) {
+    padding-left: 166px;
+    padding-right: 166px;
+    padding-bottom: 0;
+    margin-bottom: 100px;
+  }
 }
 
 .form-container {
