--- a/source/less/bloks/form-container-header.less
+++ b/source/less/bloks/form-container-header.less
@@ -11,6 +11,11 @@
     font-size: 30px;
     padding-top: 36px;
   }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 88px;
+    margin-bottom: 32px;
+  }
 }
 
 .form-container__discription {
@@ -26,6 +31,11 @@
     padding-right: 166px;
     padding-bottom: 0;
     margin-bottom: 100px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 382px;
+    padding-right: 382px;
   }
 }
 
