--- a/source/less/bloks/main-header.less
+++ b/source/less/bloks/main-header.less
@@ -20,5 +20,10 @@
   @media (min-width: @tablet-width) {
     bottom: auto;
     top: 0;
+    z-index: 10;
+  }
+
+  @media (min-width: @desktop-width) {
+    z-index: 10;
   }
 }
