--- a/source/less/bloks/promo-block-catalog.less
+++ b/source/less/bloks/promo-block-catalog.less
@@ -1,7 +1,7 @@
 .promo-block-catalog__header {
   font-weight: 700;
   line-height: 18px;
-  font-size: 21px;
+  font-size: 18px;
   text-align: center;
   text-transform: uppercase;
 
@@ -17,4 +17,8 @@
   text-align: center;
   text-transform: uppercase;
   color: @text-description-black;
+}
+
+.promo-block-catalog__wrapper {
+  margin: 17px 28px;
 }
