--- a/source/less/style.less
+++ b/source/less/style.less
@@ -19,3 +19,4 @@
 @import "./bloks/photo-gallery.less";
 @import "./bloks/promo-block-catalog.less";
 @import "./bloks/map.less";
+@import "./bloks/promo-video.less";
