--- a/source/less/bloks/photo-gallery.less
+++ b/source/less/bloks/photo-gallery.less
@@ -1,4 +1,8 @@
 .photo-gallery__list {
+  padding: 0;
+  margin: 0 20px;
+  list-style-type: none;
+
   @media (min-width: @tablet-width) {
     display: flex;
     flex-direction: row;
@@ -14,6 +18,10 @@
 }
 
 .photo-gallery__item {
+  position: relative;
+  margin-top: 10px;
+  margin-bottom: 39px;
+
   @media (min-width: @tablet-width) {
     width: 50%;
 
@@ -23,11 +31,20 @@
   }
 }
 
+.photo-gallery__item::after {
+  content: "";
+  position: absolute;
+  width: 320px;
+  top: -25px;
+  left: -19px;
+  border-top: 1px solid #d6d6d6;
+}
+
 .photo-gallery__item-information {
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 15px 0 0 0;
+  padding: 14px 0 0 0;
   background-color: #f2f2f2;
 }
 
@@ -54,6 +71,7 @@
   line-height: 26px;
   font-size: 18px;
   text-transform: uppercase;
+  margin-top: 40px;
 
   @media (min-width: @tablet-width) {
     font-size: 30px;
@@ -66,6 +84,10 @@
   font-size: 14px;
   text-transform: uppercase;
   text-align: center;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-top: 25px;
+  margin-bottom: 61px;
 }
 
 .photo-gallery__title {
@@ -87,17 +109,22 @@
 }
 
 .photo-gallery__sum-like {
+  position: relative;
+  display: block;
+  margin-top: 15px;
+  margin-left: 37px;
   font-weight: 700;
   line-height: 21px;
   font-size: 14px;
 }
 
-.photo-gallery__list {
-  list-style-type: none;
-  padding: 25px 20px 0 20px;
-}
-
 .photo-gallery__images img {
   min-width: 100%;
   display: block;
+}
+
+.like-icon {
+  position: absolute;
+  top: -2px;
+  left: -36px;
 }
