--- a/source/less/bloks/hero.less
+++ b/source/less/bloks/hero.less
@@ -3,6 +3,7 @@
   background: #325f7e;
   text-align: center;
   background-image: url(../img/back-mobile.jpg);
+  background-size: cover;
   background-repeat: no-repeat;
   padding: 90px 12px 85px 12px;
 
@@ -19,14 +20,15 @@
 
   @media (min-width: @tablet-width) {
     background-image: url(../img/back-tablet.jpg);
-    padding-top: 77px;
+    padding-top: 23px;
+
     &::after {
       content: "";
       width: 100%;
       height: 72px;
       position: absolute;
       left: 0;
-      bottom: -1px;
+      bottom: -3px;
       display: block;
       background: url(../img/white-triangle-tablet.svg) center bottom no-repeat;
     }
@@ -34,7 +36,9 @@
 
   @media (min-width: @desktop-width) {
     background-image: url(../img/back-desktop.jpg);
-    padding-top: 77px;
+    background-size: cover;
+    padding-bottom: 32px;
+
     &::after {
       content: "";
       width: 100%;
@@ -46,29 +50,31 @@
       background: url(../img/desktop-triangle.svg) center bottom no-repeat;
     }
   }
-}
 
-.hero__small {
-  padding: 50px 45px 67px 45px;
-  background-position: bottom center;
+  .hero__small {
+    padding: 50px 45px 67px 45px;
+    background-position: bottom center;
 
-  @media (min-width: @tablet-width) {
-    height: 347px;
+    @media (min-width: @tablet-width) {
+      height: 290px;
+    }
+
+    @media (min-width: @desktop-width) {
+      height: 359px;
+    }
   }
 
-  @media (min-width: @desktop-width) {
-    height: 359px;
-  }
-}
+  .hero__img {
+    @media (min-width: @tablet-width) {
+      width: 461px;
+      height: 464px;
+      padding-bottom: 0;
+      padding-top: 106px;
+    }
 
-.hero__img {
-  @media (min-width: @tablet-width) {
-    width: 461px;
-    height: 464px;
-    padding-bottom: 183px;
-  }
-
-  @media (min-width: @desktop-width) {
-    padding-bottom: 54px;
+    @media (min-width: @desktop-width) {
+      padding-bottom: 0;
+      margin-top: 52px;
+    }
   }
 }
