--- a/source/less/bloks/photo-gallery.less
+++ b/source/less/bloks/photo-gallery.less
@@ -1,3 +1,9 @@
+.photo-gallery {
+  @media (min-width: @tablet-width) {
+    margin-top: 10px;
+  }
+}
+
 .photo-gallery__list {
   padding: 0;
   margin: 0 20px;
@@ -7,7 +13,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 67px 60px 58px 60px;
+    padding: 11px 60px 58px 60px;
     margin: 0;
   }
 }
@@ -17,6 +23,14 @@
   min-width: 100%;
 }
 
+.photo-gallery__item--main img {
+  @media (min-width: @tablet-width) {
+    display: block;
+    min-width: 100%;
+    height: 400px;
+  }
+}
+
 .photo-gallery__item {
   position: relative;
   margin-top: 10px;
@@ -24,6 +38,7 @@
 
   @media (min-width: @tablet-width) {
     width: 50%;
+    overflow: hidden;
 
     &--main {
       width: 100%;
@@ -38,6 +53,10 @@
   top: -25px;
   left: -19px;
   border-top: 1px solid #d6d6d6;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
 
 .photo-gallery__item-information {
@@ -75,6 +94,7 @@
 
   @media (min-width: @tablet-width) {
     font-size: 30px;
+    margin-top: 65px;
   }
 }
 
@@ -88,6 +108,11 @@
   padding-right: 15px;
   margin-top: 25px;
   margin-bottom: 61px;
+
+  @media (min-width: @tablet-width) {
+    padding: 0 165px;
+    margin-top: 33px;
+  }
 }
 
 .photo-gallery__title {
