--- a/source/less/bloks/review-form.less
+++ b/source/less/bloks/review-form.less
@@ -34,6 +34,10 @@
     top: 3px;
     position: absolute;
     background: #e5e5e5;
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
   }
 
   @media (min-width: @tablet-width) {
@@ -64,6 +68,10 @@
     top: 23px;
     position: absolute;
     background: #e5e5e5;
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
   }
 
   @media (min-width: @tablet-width) {
